@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,7 +28,6 @@ import java.util.Set;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.CompletionStage;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.Cookie;
@@ -42,6 +41,7 @@ import org.reactivestreams.Subscription;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.ReactiveAdapter;
 import org.springframework.core.ReactiveAdapterRegistry;
+import org.springframework.core.ResolvableType;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.ResourceRegion;
@@ -50,10 +50,12 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRange;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.InvalidMediaTypeException;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.GenericHttpMessageConverter;
 import org.springframework.http.converter.HttpMessageConverter;
+import org.springframework.http.converter.SmartHttpMessageConverter;
 import org.springframework.http.server.ServletServerHttpResponse;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
@@ -80,7 +82,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	private final Type entityType;
 
-	private int status = HttpStatus.OK.value();
+	private HttpStatusCode status = HttpStatus.OK;
 
 	private final HttpHeaders headers = new HttpHeaders();
 
@@ -93,16 +95,15 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	}
 
 	@Override
-	public EntityResponse.Builder<T> status(HttpStatus status) {
-		Assert.notNull(status, "HttpStatus must not be null");
-		this.status = status.value();
+	public EntityResponse.Builder<T> status(HttpStatusCode status) {
+		Assert.notNull(status, "HttpStatusCode must not be null");
+		this.status = status;
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> status(int status) {
-		this.status = status;
-		return this;
+		return status(HttpStatusCode.valueOf(status));
 	}
 
 	@Override
@@ -115,12 +116,14 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	@Override
 	public EntityResponse.Builder<T> cookies(
 			Consumer<MultiValueMap<String, Cookie>> cookiesConsumer) {
+		Assert.notNull(cookiesConsumer, "cookiesConsumer must not be null");
 		cookiesConsumer.accept(this.cookies);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> header(String headerName, String... headerValues) {
+		Assert.notNull(headerName, "headerName must not be null");
 		for (String headerValue : headerValues) {
 			this.headers.add(headerName, headerValue);
 		}
@@ -129,18 +132,21 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	@Override
 	public EntityResponse.Builder<T> headers(Consumer<HttpHeaders> headersConsumer) {
+		Assert.notNull(headersConsumer, "headersConsumer must not be null");
 		headersConsumer.accept(this.headers);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> allow(HttpMethod... allowedMethods) {
+		Assert.notNull(allowedMethods, "allowedMethods must not be null");
 		this.headers.setAllow(new LinkedHashSet<>(Arrays.asList(allowedMethods)));
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> allow(Set<HttpMethod> allowedMethods) {
+		Assert.notNull(allowedMethods, "allowedMethods must not be null");
 		this.headers.setAllow(allowedMethods);
 		return this;
 	}
@@ -153,42 +159,41 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	@Override
 	public EntityResponse.Builder<T> contentType(MediaType contentType) {
+		Assert.notNull(contentType, "contentType must not be null");
 		this.headers.setContentType(contentType);
 		return this;
 	}
 
 	@Override
-	public EntityResponse.Builder<T> eTag(String etag) {
-		if (!etag.startsWith("\"") && !etag.startsWith("W/\"")) {
-			etag = "\"" + etag;
-		}
-		if (!etag.endsWith("\"")) {
-			etag = etag + "\"";
-		}
-		this.headers.setETag(etag);
+	public EntityResponse.Builder<T> eTag(String tag) {
+		this.headers.setETag(tag);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> lastModified(ZonedDateTime lastModified) {
+		Assert.notNull(lastModified, "lastModified must not be null");
 		this.headers.setLastModified(lastModified);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> lastModified(Instant lastModified) {
+		Assert.notNull(lastModified, "lastModified must not be null");
 		this.headers.setLastModified(lastModified);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> location(URI location) {
+		Assert.notNull(location, "location must not be null");
 		this.headers.setLocation(location);
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> cacheControl(CacheControl cacheControl) {
+		Assert.notNull(cacheControl, "cacheControl must not be null");
 		this.headers.setCacheControl(cacheControl);
 		return this;
 	}
@@ -241,7 +246,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 		private final Type entityType;
 
-		public DefaultEntityResponse(int statusCode, HttpHeaders headers,
+		public DefaultEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, T entity, Type entityType) {
 
 			super(statusCode, headers, cookies);
@@ -255,6 +260,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 		}
 
 		@Override
+		@Nullable
 		protected ModelAndView writeToInternal(HttpServletRequest servletRequest,
 				HttpServletResponse servletResponse, Context context)
 				throws ServletException, IOException {
@@ -299,7 +305,14 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 						return;
 					}
 				}
-				if (messageConverter.canWrite(entityClass, contentType)) {
+				else if (messageConverter instanceof SmartHttpMessageConverter smartMessageConverter) {
+					ResolvableType resolvableType = ResolvableType.forType(entityType);
+					if (smartMessageConverter.canWrite(resolvableType, entityClass, contentType)) {
+						smartMessageConverter.write(entity, resolvableType, contentType, serverResponse, null);
+						return;
+					}
+				}
+				else if (messageConverter.canWrite(entityClass, contentType)) {
 					((HttpMessageConverter<Object>) messageConverter).write(entity, contentType, serverResponse);
 					return;
 				}
@@ -336,7 +349,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			return messageConverters.stream()
 					.filter(messageConverter -> messageConverter.canWrite(entityClass, null))
 					.flatMap(messageConverter -> messageConverter.getSupportedMediaTypes(entityClass).stream())
-					.collect(Collectors.toList());
+					.toList();
 		}
 
 	}
@@ -347,13 +360,14 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	 */
 	private static class CompletionStageEntityResponse<T> extends DefaultEntityResponse<CompletionStage<T>> {
 
-		public CompletionStageEntityResponse(int statusCode, HttpHeaders headers,
+		public CompletionStageEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, CompletionStage<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
 		}
 
 		@Override
+		@Nullable
 		protected ModelAndView writeToInternal(HttpServletRequest servletRequest, HttpServletResponse servletResponse,
 				Context context) throws ServletException, IOException {
 
@@ -366,7 +380,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 				Context context) {
 
 			DeferredResult<ServerResponse> result = new DeferredResult<>();
-			entity().handle((value, ex) -> {
+			entity().whenComplete((value, ex) -> {
 				if (ex != null) {
 					if (ex instanceof CompletionException && ex.getCause() != null) {
 						ex = ex.getCause();
@@ -388,7 +402,6 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 						result.setErrorResult(writeException);
 					}
 				}
-				return null;
 			});
 			return result;
 		}
@@ -401,13 +414,14 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	 */
 	private static class PublisherEntityResponse<T> extends DefaultEntityResponse<Publisher<T>> {
 
-		public PublisherEntityResponse(int statusCode, HttpHeaders headers,
+		public PublisherEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, Publisher<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
 		}
 
 		@Override
+		@Nullable
 		protected ModelAndView writeToInternal(HttpServletRequest servletRequest, HttpServletResponse servletResponse,
 				Context context) throws ServletException, IOException {
 
